--- a/assets/css/accredible-admin-theme.css
+++ b/assets/css/accredible-admin-theme.css
@@ -1,117 +1,117 @@
 body {
     /* Color white */
-    --color-white: #FFFFFF;
+    --accredible-color-white: #FFFFFF;
   
     /* Color natural */
-    --color-natural-180: #141418;
-    --color-natural-160: #282831;
-    --color-natural-140: #3B3C49;
-    --color-natural-120: #4F5062;
-    --color-natural-100: #63647A;
-    --color-natural-80: #828395;
-    --color-natural-60: #A1A2AF;
-    --color-natural-40: #C1C1CA;
-    --color-natural-20: #E0E0E4;
-    --color-natural-10: #EFF0F2;
-    --color-natural-5: #F7F7F8;
+    --accredible-color-natural-180: #141418;
+    --accredible-color-natural-160: #282831;
+    --accredible-color-natural-140: #3B3C49;
+    --accredible-color-natural-120: #4F5062;
+    --accredible-color-natural-100: #63647A;
+    --accredible-color-natural-80: #828395;
+    --accredible-color-natural-60: #A1A2AF;
+    --accredible-color-natural-40: #C1C1CA;
+    --accredible-color-natural-20: #E0E0E4;
+    --accredible-color-natural-10: #EFF0F2;
+    --accredible-color-natural-5: #F7F7F8;
   
     /* Color primary */
-    --color-primary-180: #0E0E1E;
-    --color-primary-160: #1C1C3D;
-    --color-primary-140: #292B5B;
-    --color-primary-120: #37397A;
-    --color-primary-100: #454798;
-    --color-primary-80: #6A6CAD;
-    --color-primary-60: #8F91C1;
-    --color-primary-40: #B5B5D6;
-    --color-primary-20: #DADAEA;
-    --color-primary-10: #ECEDF5;
-    --color-primary-5: #F6F6FA;
+    --accredible-color-primary-180: #0E0E1E;
+    --accredible-color-primary-160: #1C1C3D;
+    --accredible-color-primary-140: #292B5B;
+    --accredible-color-primary-120: #37397A;
+    --accredible-color-primary-100: #454798;
+    --accredible-color-primary-80: #6A6CAD;
+    --accredible-color-primary-60: #8F91C1;
+    --accredible-color-primary-40: #B5B5D6;
+    --accredible-color-primary-20: #DADAEA;
+    --accredible-color-primary-10: #ECEDF5;
+    --accredible-color-primary-5: #F6F6FA;
   
     /* Color secondary */
-    --color-secondary-180: #082426;
-    --color-secondary-160: #0F484C;
-    --color-secondary-140: #176D72;
-    --color-secondary-120: #1E9198;
-    --color-secondary-100: #26B5BE;
-    --color-secondary-80: #51C4CB;
-    --color-secondary-60: #7DD3D8;
-    --color-secondary-40: #A8E1E5;
-    --color-secondary-20: #D4F0F2;
-    --color-secondary-10: #E9F8F9;
-    --color-secondary-5: #F4FBFC;
+    --accredible-color-secondary-180: #082426;
+    --accredible-color-secondary-160: #0F484C;
+    --accredible-color-secondary-140: #176D72;
+    --accredible-color-secondary-120: #1E9198;
+    --accredible-color-secondary-100: #26B5BE;
+    --accredible-color-secondary-80: #51C4CB;
+    --accredible-color-secondary-60: #7DD3D8;
+    --accredible-color-secondary-40: #A8E1E5;
+    --accredible-color-secondary-20: #D4F0F2;
+    --accredible-color-secondary-10: #E9F8F9;
+    --accredible-color-secondary-5: #F4FBFC;
   
     /* Color success */
-    --color-success-160: #0C341E;
-    --color-success-140: #124E2E;
-    --color-success-120: #18683D;
-    --color-success-100: #1E824C;
-    --color-success-80: #4B9B70;
-    --color-success-60: #78B494;
-    --color-success-40: #A5CDB7;
-    --color-success-20: #D2E6DB;
-    --color-success-10: #E9F3ED;
-    --color-success-5: #F4F9F6;
+    --accredible-color-success-160: #0C341E;
+    --accredible-color-success-140: #124E2E;
+    --accredible-color-success-120: #18683D;
+    --accredible-color-success-100: #1E824C;
+    --accredible-color-success-80: #4B9B70;
+    --accredible-color-success-60: #78B494;
+    --accredible-color-success-40: #A5CDB7;
+    --accredible-color-success-20: #D2E6DB;
+    --accredible-color-success-10: #E9F3ED;
+    --accredible-color-success-5: #F4F9F6;
   
     /* Color warning */
-    --color-warning-160: #5D4A21;
-    --color-warning-140: #8B7031;
-    --color-warning-120: #BA9542;
-    --color-warning-100: #E8BA52;
-    --color-warning-80: #EDC875;
-    --color-warning-60: #F1D697;
-    --color-warning-40: #F6E3BA;
-    --color-warning-20: #FAF1DC;
-    --color-warning-10: #FDF8EE;
-    --color-warning-5: #FEFCF6;
+    --accredible-color-warning-160: #5D4A21;
+    --accredible-color-warning-140: #8B7031;
+    --accredible-color-warning-120: #BA9542;
+    --accredible-color-warning-100: #E8BA52;
+    --accredible-color-warning-80: #EDC875;
+    --accredible-color-warning-60: #F1D697;
+    --accredible-color-warning-40: #F6E3BA;
+    --accredible-color-warning-20: #FAF1DC;
+    --accredible-color-warning-10: #FDF8EE;
+    --accredible-color-warning-5: #FEFCF6;
   
     /* Color danger */
-    --color-danger-160: #5B1206;
-    --color-danger-140: #881A0A;
-    --color-danger-120: #B6230D;
-    --color-danger-100: #E22C10;
-    --color-danger-80: #E95640;
-    --color-danger-60: #EE8070;
-    --color-danger-40: #F4AB9F;
-    --color-danger-20: #F9D5CF;
-    --color-danger-10: #FCEAE7;
-    --color-danger-5: #FEF4F3;
+    --accredible-color-danger-160: #5B1206;
+    --accredible-color-danger-140: #881A0A;
+    --accredible-color-danger-120: #B6230D;
+    --accredible-color-danger-100: #E22C10;
+    --accredible-color-danger-80: #E95640;
+    --accredible-color-danger-60: #EE8070;
+    --accredible-color-danger-40: #F4AB9F;
+    --accredible-color-danger-20: #F9D5CF;
+    --accredible-color-danger-10: #FCEAE7;
+    --accredible-color-danger-5: #FEF4F3;
   
     /* Font sizes */
-    --font-size-xxs: 12px;
-    --font-size-xs: 13px;
-    --font-size-s: 14px;
-    --font-size-normal: 16px;
-    --font-size-l: 18px;
-    --font-size-xl: 20px;
-    --font-size-xxl: 24px;
-    --font-size-h: 30px;
-    --font-size-xh: 40px;
+    --accredible-font-size-xxs: 12px;
+    --accredible-font-size-xs: 13px;
+    --accredible-font-size-s: 14px;
+    --accredible-font-size-normal: 16px;
+    --accredible-font-size-l: 18px;
+    --accredible-font-size-xl: 20px;
+    --accredible-font-size-xxl: 24px;
+    --accredible-font-size-h: 30px;
+    --accredible-font-size-xh: 40px;
   
     /* Font line heights */
-    --font-line-height-s: 24px;
-    --font-line-height-normal: 26px;
+    --accredible-font-line-height-s: 24px;
+    --accredible-font-line-height-normal: 26px;
   
     /* Font weights */
-    --font-weight-light: 300;
-    --font-weight-regular: 400;
-    --font-weight-semibold: 600;
-    --font-weight-bold: 700;
-    --font-weight-extrabold: 900;
+    --accredible-font-weight-light: 300;
+    --accredible-font-weight-regular: 400;
+    --accredible-font-weight-semibold: 600;
+    --accredible-font-weight-bold: 700;
+    --accredible-font-weight-extrabold: 900;
   
     /* Spacing base */
-    --spacing-base: 5px;
-    --spacing-2x: 10px;
-    --spacing-3x: 15px;
-    --spacing-4x: 20px;
-    --spacing-5x: 25px;
-    --spacing-6x: 30px;
-    --spacing-7x: 35px;
-    --spacing-8x: 40px;
-    --spacing-9x: 45px;
-    --spacing-10x: 50px;
-    --spacing-12x: 60px;
-    --spacing-16x: 80px;
-    --spacing-20x: 100px;
+    --accredible-spacing-base: 5px;
+    --accredible-spacing-2x: 10px;
+    --accredible-spacing-3x: 15px;
+    --accredible-spacing-4x: 20px;
+    --accredible-spacing-5x: 25px;
+    --accredible-spacing-6x: 30px;
+    --accredible-spacing-7x: 35px;
+    --accredible-spacing-8x: 40px;
+    --accredible-spacing-9x: 45px;
+    --accredible-spacing-10x: 50px;
+    --accredible-spacing-12x: 60px;
+    --accredible-spacing-16x: 80px;
+    --accredible-spacing-20x: 100px;
 }
   
