fixed leaking font style

--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
 
 body.accredible-learndash-admin {
-    font: 400 16px/24px Source Sans Pro;
     background: white;
+}
+
+.accredible-wrapper {
+    font: 400 16px/24px Source Sans Pro;
 }
 
 .accredible-header-tile {
