--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -177,6 +177,46 @@ body.accredible-learndash-admin .label {
     text-decoration: none;
 }
 
+/* TABLE */
+
+table.accredible-table {
+    width: 100%;
+    padding: 0 var(--accredible-spacing-3x) var(--accredible-spacing-4x);
+    border: 1px solid var(--accredible-color-natural-20);
+    border-radius: 10px;
+    border-spacing: 0px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 5%);
+}
+
+.accredible-header-row {
+    height: 56px;
+}
+
+.accredible-header-row th {
+    font-size: var(--accredible-font-size-xs);
+    font-weight: var(--accredible-font-weight-semibold);
+    color: var(--accredible-color-natural-100);
+    text-align: left;
+}
+
+.accredible-row {
+    height: 48px;
+}
+
+.accredible-cell-time {
+    font-weight: var(--accredible-font-weight-light);
+    color: var(--accredible-color-natural-100);
+}
+
+.accredible-table.has-hover .accredible-row:hover {
+    background-color: var(--accredible-color-secondary-10);
+}
+
+.accredible-table.has-hover .accredible-row td:first-of-type {
+    padding-left: calc(var(--accredible-spacing-base) + 1px);
+}
+
 /* DIRECTION */
 
 .accredible-wrapper,
