--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -310,8 +310,15 @@ table.accredible-table {
     color: var(--accredible-color-success-100);
 }
 
-.accredible-row .cell-value-error[title] {
-    cursor: pointer;
+.accredible-row .cell-value-error {
+   display: flex;
+   align-items: center;
+}
+
+.accredible-row .cell-value-error img {
+    width: 14px;
+    height: 14px;
+    margin-left: var(--accredible-spacing-3x);
 }
 
 .wp-core-ui .accredible-cell-actions .button {
