Issuance form - added form validation

--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -152,6 +152,10 @@ body.accredible-learndash-admin .label {
     font-size: var(--accredible-font-size-xs);
 }
 
+.accredible-form-field-hidden {
+    display: none;
+}
+
 /* AUTOCOMPLETE */
 
 .ui-autocomplete.accredible-autocomplete {
