remove learndash logo and add accredible

--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -250,6 +250,10 @@ body.accredible-learndash-admin .label {
     border-bottom: 1px solid var(--accredible-color-natural-10);
 }
 
+.accredible-content .status-tile .logo img {
+    width: 90%;
+}
+
 .accredible-content .status-tile .status {
     display: flex;
     align-items: center;
