--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -180,6 +180,7 @@ body.accredible-learndash-admin .label {
     height: 40px;
     font-size: var(--accredible-font-size-l);
     border-radius: 4px;
+    min-width: 70px;
 }
 
 .wp-core-ui .button.accredible-button-small,
@@ -607,6 +608,55 @@ table.accredible-table {
     background-image: url('../images/error.png');
     background-size: cover;
 }
+
+/* BUTTON SPINNER */
+
+.wp-core-ui .button.accredible-button-spinner {
+    display: flex;
+    align-items: center;
+    grid-gap: var(--accredible-spacing-2x);
+    gap: var(--accredible-spacing-2x);
+}
+
+.accredible-button-spinner:after {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border-top: 2px solid rgba(255, 255, 255, 0.2);
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    border-left: 2px solid var(--accredible-color-white);
+    border-radius: 50%;
+    content: "";
+    -ms-transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: accredibleSpin 1.1s infinite linear;
+    animation: accredibleSpin 1.1s infinite linear;
+}
+
+@-webkit-keyframes accredibleSpin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes accredibleSpin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
 
 /* DIRECTION */
 
