Settings - fetch status info using php and ajax
- enqueue scripts for loading issuer via ajax
- after settings are saved, refetch status using ajax

--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -291,6 +291,11 @@ button[class*="accredible-button"] {
     max-width: 500px;
 }
 
+#issuer-info {
+    min-height: 60px;
+    padding: 0 var(--accredible-spacing-3x);
+}
+
 .accredible-content .status-tile .logo {
     display: flex;
     align-items: center;
