--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -293,7 +293,7 @@ button[class*="accredible-button"] {
 
 #accredible-issuer-info {
     min-height: 60px;
-    padding: 0 var(--accredible-spacing-3x);
+    padding: var(--accredible-spacing-3x) 0;
 }
 
 .accredible-content .status-tile .logo {
