--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -93,6 +93,12 @@ body.accredible-learndash-admin .label {
     font-size: var(--accredible-font-size-normal);
 }
 
+.accredible-form-field.accredible-fill-width input[type="text"],
+.accredible-form-field.accredible-fill-width select {
+    width: 100%;
+    max-width: 100%;
+}
+
 .accredible-form-field input[type="text"]:hover,
 .wp-core-ui .accredible-form-field select:not(:disabled):hover {
     border-color: var(--accredible-color-secondary-80);
@@ -539,6 +545,12 @@ table.accredible-table {
     pointer-events: auto;
     -webkit-tap-highlight-color: transparent;
     transition: opacity 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+/* SIDENAV */
+
+.accredible-sidenav.ui-dialog .ui-dialog-content .accredible-wrapper {
+    padding: var(--accredible-spacing-6x) 0 0;
 }
 
 /* TOAST */
