--- a/assets/css/accredible-admin-settings.css
+++ b/assets/css/accredible-admin-settings.css
@@ -93,6 +93,12 @@ body.accredible-learndash-admin .label {
     font-size: var(--accredible-font-size-normal);
 }
 
+.accredible-form-field.accredible-fill-width input[type="text"],
+.accredible-form-field.accredible-fill-width select {
+    width: 100%;
+    max-width: 100%;
+}
+
 .accredible-form-field input[type="text"]:hover,
 .wp-core-ui .accredible-form-field select:not(:disabled):hover {
     border-color: var(--accredible-color-secondary-80);
@@ -539,6 +545,37 @@ table.accredible-table {
     pointer-events: auto;
     -webkit-tap-highlight-color: transparent;
     transition: opacity 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+/* SIDENAV */
+.accredible-sidenav.ui-dialog .accredible-wrapper {
+    display: flex;
+    height: calc(100% - var(--accredible-spacing-6x));
+}
+
+.accredible-sidenav.ui-dialog .ui-dialog-content .accredible-wrapper {
+    padding: var(--accredible-spacing-6x) 0 0;
+}
+
+.accredible-sidenav.ui-dialog .accredible-form-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.accredible-sidenav.ui-dialog .accredible-form-wrapper form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.accredible-sidenav-actions {
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    grid-gap: var(--accredible-spacing-2x);
+    gap: var(--accredible-spacing-2x);
 }
 
 /* TOAST */
